src/components/about/About.module.scss
.about {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  padding: 0, 2em, 0, 0;
  p,
  h2,
  .skills {
    width: 90%;
  }
  h1 {
    font-size: 2em;
    text-transform: uppercase;
  }
  img {
    width: 10vw;
    height: auto;
    border-radius: 50%;
  }
  ul {
    list-style-type: none;
    padding: 0em;
    li {
      display: inline-block;
      margin: 0 1em 0 1em;
    }
  }
  .skills {
    align-self: center;
    list-style-image: url("./correct.png");

    li {
      display: inline-block;
      text-align: center;
      width: 29%;
      padding: 1em 0em 1em 0em;
    }
  }
  .logo {
    width: 1em;
    height: auto;
  }
}

